Fri Nov 13 15:30:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * modules/ProjectCreator.pm:

          update_template_variable() now processes values through
          replace_parameters() and treats double-quote characters
          in a project specific way. This allows the "tao_idlflags"
          template variable to contain quoted roots, to allow for
          spaces within the directory names.
          Also convert_command_parameters() now also treats
          double-quote characters in a project specific way for the
          same reason, to allow " to be used within "idlflags" inside
          project mpc files.

Wed Nov 11 07:00:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:

          Don't use visibility with ndds

Mon Nov  9 15:22:20 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * config/qt4_core.mpb:

          Added QT4_INCDIR to allow user to specify include directory
          which is not relative to QTDIR (such as distributions that
          place qt in /usr/include/qt4).

        * config/qt4_gui.mpb:

          Added QRC resource compiler command handling.
          Added 'ui_' prefix to output filename of UI compiler to match
          the behavior of 'qmake'.

Fri Nov  6 03:39:51 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * config/mpich.mpb:

          Added an include path and remove an unnecessary library (for
          non-windows project types).

Thu Nov  5 19:39:35 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:
        * modules/XMLProjectBase.pm:

          Fixed the 'equote' pseudo template variable.  It wasn't actually
          escaped before.  Now it is.

Mon Nov  2 13:35:00 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * modules/WorkspaceCreator.pm:

          Fixed a bug where an MPC file used in more than one aggregated
          workspace wouldn't be ignored.
